# manki

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  compose.yaml
src/: deck.rs  deck_maker.rs  file_manager.rs  gui.rs  gui_util.rs  icons.rs  installer.rs  io_manager.rs  logger.rs  main.rs  serde_util.rs  settings.rs
