[package]
name = "manki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
dirs = "3.0"
chrono = "0.4.26"
serde_json = "1.0.104"
serde = { version = "1.0.104", features = ["derive"] }
